<resources>
    <string name="app_name">weather</string>
    <string name="tab1">Weather</string>
    <string name="tab2">Note</string>
    <string name="my_note">My notes</string>
    <string name="note_search">Please enter notes to search</string>
    <string name="note_add">Add notes</string>
    <string name="note_add1">Add</string>
    <string name="note_edit">Edit</string>
    <string name="note_edit1">Edit notes</string>
    <string name="note_detail">Note details</string>
    <string name="note_add_title">Title</string>
    <string name="note_add_content">content</string>
    <string name="note_add_title_input">Please enter a title</string>
    <string name="note_add_content_input">Please enter the content</string>
    <string name="note_serch">Search</string>
    <string name="err_msg">There is something wrong with the data. Please try again later.</string>
    <string name="note_delete">Are you sure you want to delete this record?</string>
    <string name="note_tips">Tips</string>
    <string name="note_cancer">Cancel</string>
    <string name="note_sure">Sure</string>
    <string name="w_time">Last updated:</string>
    <string name="w_boday_hot">Sensible:</string>
    <string name="w_more_w">More weather forecasts</string>
    <string name="w_air_w">Air quality</string>
    <string name="w_pollution">Pollution index</string>
    <string name="w_wind">Wind direction</string>
    <string name="w_wind_x">Wind direction</string>
    <string name="w_wind_l">Wind power</string>
    <string name="w_no_more">Sorry, no more information yet</string>
    <string name="w_day1"></string>
    <string name="w_day2"></string>
    <string name="w_day3"></string>
    <string name="w_day4"></string>
    <string name="w_day5"></string>
    <string name="w_day6">Unknown</string>
    <string name="w_day7">Acquisition failed</string>
    <string name="w_mouth">Month</string>
    <string name="w_day">Number</string>
    <string name="w_week1">Monday</string>
    <string name="w_week2">Tuesday</string>
    <string name="w_week3">Wednesday</string>
    <string name="w_week4">Thursday</string>
    <string name="w_week5">Friday</string>
    <string name="w_week6">Saturday</string>
    <string name="w_week7">Sunday</string>
    <string name="w_day_day1">Yesterday</string>
    <string name="w_day_day2">Today</string>
    <string name="w_day_day3">Tomorrow</string>
    <string name="w_w15_1">Daytime weather conditions</string>
    <string name="w_w15_2">Night weather conditions</string>
    <string name="w_w15_3">Cloudiness</string>
    <string name="w_w15_4">Ultraviolet rays</string>
    <string name="w_w15_5">Visibility</string>
    <string name="w_w15_6">Rainfall</string>
    <string name="w_w15_7">relative humidity</string>
    <string name="w_w15_8">Atmospheric pressure</string>
    <string name="w_w15_9">Level</string>
    <string name="w_w15_10">ppp</string>
    <string name="w_w15_11">Weak</string>
    <string name="w_w15_12">Secondary</string>
    <string name="w_w15_13">Strong</string>
    <string name="w_w15_14">Very strong</string>
    <string name="w_w15_15">UV free</string>
    <string name="w_w15_16">Please enter a city</string>
    <string name="w_w15_17">My city</string>
    <string name="w_w15_18">Are you sure to delete this city?</string>
    <string name="w_w15_19">Switch City</string>
    <string name="note_save">Save</string>
    <string name="w_wind_s">Wind speed</string>
</resources>