<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:padding="10dp"
            android:src="@mipmap/arrow_left">

        </ImageView>

        <TextView
            android:id="@+id/iv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/note_edit1"
            android:textColor="@color/app_main_text_color"
            android:textSize="15dp">

        </TextView>

        <com.ruffian.library.widget.RTextView
            android:id="@+id/tv_sub"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/note_edit"
            android:textSize="13dp"
            app:background_normal="@color/teal_200"
            app:corner_radius="44dp"
            app:text_color_normal="@color/white"></com.ruffian.library.widget.RTextView>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/rl_title"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:background="@null"
                android:textColor="@color/app_main_text_color"
                android:id="@+id/et_title"
                android:textSize="22dp"
                android:maxLength="80"
                android:hint="@string/note_add_title_input"
                android:layout_height="wrap_content">

            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:textSize="13dp"
                android:textColor="@color/app_main_color"
                android:text="22.00"
                android:id="@+id/tv_time"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

            </TextView>


            <EditText
                android:layout_width="match_parent"
                android:background="@null"
                android:textColor="@color/app_main_text_color"
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:maxLength="80"
                android:gravity="top"
                android:id="@+id/et_content"
                android:hint="@string/note_add_content_input"
                android:layout_height="wrap_content">

            </EditText>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>