<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:minWidth="280dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_height="wrap_content"
    android:background="@drawable/select_live_msg_bg"
    android:layout_gravity="center"
    >

    <TextView
        android:id="@+id/tvNotice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/note_tips"
        android:textColor="#333333"
        android:textSize="18dp"></TextView>

    <TextView
        android:layout_width="match_parent"
        android:text=""
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/tvCouponContent"
        android:textColor="#666666"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="16dp"
        android:layout_height="wrap_content">
    </TextView>
    <View
        android:layout_width="match_parent"
        android:background="#E5E5E5"
        android:layout_marginTop="30dp"
        android:layout_height="0.5dp"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/note_cancer"
            android:textColor="#999999"
            android:textSize="15dp"></TextView>
        <View
            android:layout_width="0.5dp"
            android:background="#E5E5E5"
            android:layout_height="match_parent"></View>

        <TextView
            android:id="@+id/tvOpen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/note_sure"
            android:textColor="@color/app_btn_color"
            android:textSize="15dp"></TextView>
    </LinearLayout>
</LinearLayout>